// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PastReportHeaderが正しく表示される > タグが空の場合も正しく表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-i3pbo"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1xbcbn6-MuiTypography-root"
    >
      6月19日(水)の日報（読み取り専用）
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-x3ur3e-MuiTypography-root"
    >
      開発、会議、レビュー
    </h6>
    <div
      class="MuiBox-root css-1ppihqm"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-jyouah-MuiTypography-root"
    >
      過去の日報は編集できません・5個のつぶやき
    </p>
  </div>
</DocumentFragment>
`;

exports[`PastReportHeaderが正しく表示される > 編集可能モードで表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-i3pbo"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1xbcbn6-MuiTypography-root"
    >
      6月19日(水)の日報
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-x3ur3e-MuiTypography-root"
    >
      開発、会議、レビュー
    </h6>
    <div
      class="MuiBox-root css-1ppihqm"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          開発
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          times_esa
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 css-jyouah-MuiTypography-root"
    >
      5個のつぶやき
    </p>
  </div>
</DocumentFragment>
`;

exports[`PastReportHeaderが正しく表示される > 読み取り専用モードで表示される 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-i3pbo"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1xbcbn6-MuiTypography-root"
    >
      6月19日(水)の日報（読み取り専用）
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-x3ur3e-MuiTypography-root"
    >
      開発、会議、レビュー
    </h6>
    <div
      class="MuiBox-root css-1ppihqm"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          開発
        </span>
      </div>
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-2mpvrf-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelMedium css-16cgrcw-MuiChip-label"
        >
          times_esa
        </span>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body2 css-jyouah-MuiTypography-root"
    >
      過去の日報は編集できません・5個のつぶやき
    </p>
  </div>
</DocumentFragment>
`;
